// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterStateIcon /> renders correctly for error status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="error-circle-o"
  type="pf"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for installing status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="in-progress"
  type="pf"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for patching status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="hourglass-half"
  type="fa"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for pending status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="hourglass-half"
  type="fa"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for ready status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="ok"
  type="pf"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for uninstalling status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="ban"
  type="fa"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for unknown status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="unknown"
  type="pf"
/>
`;

exports[`<ClusterStateIcon /> renders correctly for warning status 1`] = `
<Icon
  className="fa-lg clusterstate "
  name="warning-triangle-o"
  type="pf"
/>
`;
